--- a/src/Home/PortalBundle/Resources/config/routing.yml
+++ b/src/Home/PortalBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 portal_homepage:
     path:     /
     defaults: { _controller: PortalBundle:Default:index }
+
+try:
+    path:     /try
+    defaults: { _controller: PortalBundle:Default:create }
